--- a/colorful-dream/example.tex
+++ b/colorful-dream/example.tex
@@ -3,7 +3,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{microtype}
-\RequirePackage[english,main=ngerman]{babel}
+\usepackage[english,main=ngerman]{babel}
 
 \usetheme[emblem,theorems]{colorful-dream}
 
@@ -24,7 +24,6 @@
 % TODO: you may want to change this if you do not have downloaded the image
 \titleimage{\includegraphics{../exampletitleimage}}
 
-
 % just an example command
 \newcommand\twosplit[3][t]{%
     \begin{columns}[#1]
@@ -37,6 +36,8 @@
     \end{columns}
 }
 
+\usepackage[backend=bibtex8,style=alphabetic]{biblatex}
+\addbibresource{example.bib}
 
 \begin{document}
 
@@ -122,7 +123,7 @@
 \subsection{This is an example}
 
 \begin{frame}{Mega-Example 1}
-    Hello
+    Hello \cite{knuth-fa}!
 \end{frame}
 
 \begin{frame}{Mega-Example 2}
@@ -136,18 +137,18 @@
 \end{frame}
 
 \begin{frame}{Mega-Example 2}
-    World
+    World \cite{knuth-web}!
 \end{frame}
 
 \section{Talk the talker}
 \subsection{This is an example}
 
 \begin{frame}{Mega-Example 1}
-    Hello
+    Hello \cite{dirac}!
 \end{frame}
 
 \begin{frame}{Mega-Example 2}
-    World
+    World as seen in \cite{einstein}.
 \end{frame}
 
 \subsection{This is an example, 2}
@@ -181,6 +182,5 @@
 \begin{frame}{Mega-Example 2}
     World
 \end{frame}
-
 
 \end{document}
