Updated gray in fragment and updated the readme to reference the themes
Signed-off-by: the-limerent <florian.sihler@uni-ulm.de>

--- a/fragment/beamerthemefragment.sty
+++ b/fragment/beamerthemefragment.sty
@@ -81,8 +81,8 @@
 
 % black/contrast color to be used in the document
 
-% Theme: RGB(023,096,103) RGB(237,232,238) RGB(153,07,051)
-\SetColorProfile{023,096,103}{237,232,238}{153,007,051}
+% Theme: RGB(023,096,103) RGB(213, 213, 214) RGB(153,07,051)
+\SetColorProfile{023,096,103}{213,213,214}{153,007,051}
 
 %% shortcut commands for the user
 %% -----------------------------------------------------------------------------
