--- a/fragment/example.tex
+++ b/fragment/example.tex
@@ -34,8 +34,9 @@
 
 % customize section-split in the toc at each section
 \SectionLeft{1-2}\SectionRight{3-4}
-% Theme: RGB(023,096,103) RGB(237,232,238) RGB(153,07,051)
-\SetColorProfile{023,096,103}{237,232,238}{153,007,051}
+
+% Theme: RGB(023,096,103) RGB(213, 213, 214) RGB(153,07,051)
+\SetColorProfile{023,096,103}{213,213,214}{153,007,051}
 
 \begin{document}
 
