Added package markers
Signed-off-by: the-limerent <florian.sihler@uni-ulm.de>

--- a/fragment/beamerthemefragment.sty
+++ b/fragment/beamerthemefragment.sty
@@ -7,11 +7,12 @@
 %% 
 %%                      ulm university, SoSe2020
 
-
 %% Development notes:
 %%    All internal commands and registers will be prefixed with 'btfr@'
 %%
 
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{beamerthemefragment}[2019/08/17 v1.0.0 Latex-Beamertheme fragment]
 
 %% packet options
 %% -----------------------------------------------------------------------------
