--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -13,6 +13,8 @@
 %%    All internal commands and registers will be prefixed with 'btl@'
 %%
 
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{beamerthemelucy}[2019/08/17 v1.0.0 Latex-Beamertheme lucy]
 
 %% packet options
 %% -----------------------------------------------------------------------------
