--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -8,11 +8,12 @@
 %% 
 %%                      ulm university, SoSe2020
 
-
 %% Development notes:
 %%    All internal commands and registers will be prefixed with 'btcd@'
 %%
 
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{beamerthemecolorful-dream}[2019/08/17 v1.0.0 Latex-Beamertheme colorful-dream]
 
 %% packet options
 %% -----------------------------------------------------------------------------
