Update titleimage to accept long definitions
Signed-off-by: EagleoutIce <maeusepiep99@web.de>

--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -225,7 +225,7 @@
 %% titleimage
 %% -----------------------------------------------------------------------------
 
-\def\titleimage#1{\gdef\btcd@title@image{#1}}
+\long\def\titleimage#1{\long\gdef\btcd@title@image{#1}}
 \def\btcd@title@image{}
 
 \setbeamertemplate{title page}{%
