Updated title image size in btcd
Signed-off-by: EagleoutIce <maeusepiep99@web.de>

--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -232,7 +232,7 @@
     \vskip2em
     {\usebeamerfont{title}\usebeamercolor{title}\MakeUppercase{\inserttitle}\par}
     {\usebeamerfont{subtitle}\usebeamercolor{subtitle}\insertsubtitle\(\;\circ\;\){\usebeamerfont{date}\usebeamercolor{date}\insertdate}\par}%
-    \vfill\parbox[t][10.5em]{\linewidth}{\vfill\centering\resizebox{!}{7.5em}{\btcd@title@image}\vfill}
+    \vfill\parbox[t][10.5em]{\linewidth}{\vfill\centering\resizebox{!}{8em}{\btcd@title@image}\vfill}\\%
     \begin{minipage}{0.75\linewidth}
         \ifx\insertauthor\@empty%
         \else{\usebeamerfont{author}\usebeamercolor{author}\insertauthor\par}%
