--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -3,9 +3,9 @@
 %% Author:  Florian Sihler, 17.08.2020
 %%
 %% This package is a beamer theme to be used with the latex beamer-class.
-%% I've used this team at school for my abitur. It uses my old way of 
+%% I've used this team at school for my abitur. It uses my old way of
 %% dealing with colors having cprimary, csecondary and cwhite as colors.
-%% 
+%%
 %%                      ulm university, SoSe2020
 
 
@@ -149,24 +149,31 @@
 %% head line
 %% -----------------------------------------------------------------------------
 
+\def\titleaddon#1{\gdef\@titleaddon{#1}}
+\titleaddon{}
 \defbeamertemplate*{frametitle}{lucy}[1][]{%
     \vskip0.35cm%
     \hspace*{-0.25cm}\begin{tikzpicture}[]
         \fill[cprimary, rounded corners=1.25pt] (0,0) rectangle ++ (\paperwidth-0.5cm,2.125em);
         \node[right] at(0,2.125em/2-0.075em){\LARGE\strut{\insertframetitle}};%smash
+        \@titleaddon%
     \end{tikzpicture}%
 }
 
 %% footer
 %% -----------------------------------------------------------------------------
+\def\lucy@nolink{}
+\ifcsname DisableLinkStyle\endcsname%
+\let\lucy@nolink\DisableLinkStyle%
+\fi
 
 \providecommand{\totalframes}{\inserttotalframenumber}
 \defbeamertemplate*{footline}{lucy}[1][] {
     \hskip0.25cm\begin{tikzpicture}[fnote/.style={cwhite,font={\lfseries\supertiny}}]
         \fill[csecondary, rounded corners=1.25pt] (0,0) rectangle ++ (\paperwidth-0.5cm,1.125em);
-        \node[right,fnote] at(0,1.125em/2) {\insertshorttitle};
-        \node[fnote] at(\paperwidth/2,1.125em/2) {\insertshortauthor};
-        \node[left,fnote] at(\paperwidth-0.5cm,1.125em/2) {\insertframenumber/\totalframes};
+        \node[right,fnote] at(0,1.125em/2) {\lucy@nolink\insertshorttitle};
+        \node[fnote] at(\paperwidth/2,1.125em/2) {\lucy@nolink\insertshortauthor};
+        \node[left,fnote] at(\paperwidth-0.5cm,1.125em/2) {\lucy@nolink\insertframenumber/\totalframes};
     \end{tikzpicture}%
     \vskip0.25cm%
 }
