--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -51,10 +51,15 @@
 %% the color profile
 %% -----------------------------------------------------------------------------
 
-\definecolor{cprimary}{RGB}{245, 130, 32}          %% #F58220
-\definecolor{csecondary}{RGB}{126, 126, 126}       %% #7E7E7E
-\definecolor{cwhite}{RGB}{255, 255, 255}           %% #FFFFFF
-\definecolor{cblack}{RGB}{1, 0, 0}                 %% #010000
+% \definecolor{cprimary}{RGB}{245, 130, 32}          %% #F58220
+% \definecolor{csecondary}{RGB}{126, 126, 126}       %% #7E7E7E
+% \definecolor{cwhite}{RGB}{255, 255, 255}           %% #FFFFFF
+% \definecolor{cblack}{RGB}{1, 0, 0}                 %% #010000
+
+\definecolor{cprimary}{RGB}{335d7e}                  %% #335d7e
+\definecolor{csecondary}{HTML}{6c747a}               %% #6c747a
+\definecolor{cwhite}{RGB}{255, 255, 255}             %% #FFFFFF
+\definecolor{cblack}{RGB}{1, 0, 0}                   %% #010000
 
 %% shortcut commands for the user
 %% -----------------------------------------------------------------------------
