--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -56,7 +56,7 @@
 % \definecolor{cwhite}{RGB}{255, 255, 255}           %% #FFFFFF
 % \definecolor{cblack}{RGB}{1, 0, 0}                 %% #010000
 
-\definecolor{cprimary}{RGB}{335d7e}                  %% #335d7e
+\definecolor{cprimary}{HTML}{335d7e}                  %% #335d7e
 \definecolor{csecondary}{HTML}{6c747a}               %% #6c747a
 \definecolor{cwhite}{RGB}{255, 255, 255}             %% #FFFFFF
 \definecolor{cblack}{RGB}{1, 0, 0}                   %% #010000
