Improved shade in lucy
Signed-off-by: EagleoutIce <maeusepiep99@web.de>

--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -105,8 +105,8 @@
 
 \setbeamercolor{section in toc}{fg=cprimary}
 \setbeamercolor{subsection in toc}{fg=csecondary}
-\setbeamercolor{section in toc shaded}{fg=cprimary!23!white}
-\setbeamercolor{subsection in toc shaded}{fg=csecondary!23!white}
+\setbeamercolor{section in toc shaded}{fg=cprimary}
+\setbeamercolor{subsection in toc shaded}{fg=csecondary}
 
 \setbeamercolor{alerted text}{fg=cprimary}
 
@@ -187,5 +187,6 @@
 \setbeamercolor{subsection in toc}{bg=white,fg=structure}
 \setbeamertemplate{subsection in toc}{%
   \hspace{1.2em}{\color{csecondary}\rule[0.3ex]{3pt}{3pt}}~~\small\inserttocsubsection\par}
-
+\setbeamertemplate{section in toc shaded}[default][40]
+\setbeamertemplate{subsection in toc shaded}[default][40]
 \endinput
