--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -169,13 +169,16 @@
 \let\lucy@nolink\DisableLinkStyle%
 \fi
 
+% make em font dependent!
+\def\lucy@len@footheight{1.175em}
+
 \providecommand{\totalframes}{\inserttotalframenumber}
 \defbeamertemplate*{footline}{lucy}[1][] {
     \hskip0.25cm\begin{tikzpicture}[fnote/.style={cwhite,font={\lfseries\supertiny}}]
-        \fill[csecondary, rounded corners=1.25pt] (0,0) rectangle ++ (\paperwidth-0.5cm,1.125em);
-        \node[right,fnote] at(0,1.125em/2) {\lucy@nolink\insertshorttitle};
-        \node[fnote] at(\paperwidth/2,1.125em/2) {\lucy@nolink\insertshortauthor};
-        \node[left,fnote] at(\paperwidth-0.5cm,1.125em/2) {\lucy@nolink\insertframenumber/\totalframes};
+        \fill[csecondary, rounded corners=1.25pt] (0,0) rectangle ++ (\paperwidth-0.5cm,\lucy@len@footheight);
+        \node[right,fnote] at(0,\lucy@len@footheight/2) {\lucy@nolink\insertshorttitle};
+        \node[fnote] at(\paperwidth/2,\lucy@len@footheight/2) {\lucy@nolink\insertshortauthor};
+        \node[left,fnote] at(\paperwidth-0.5cm,\lucy@len@footheight/2) {\lucy@nolink\insertframenumber\,/\,\totalframes};
     \end{tikzpicture}%
     \vskip0.25cm%
 }
