Adding 'impitem' for import itemize points

--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -122,6 +122,7 @@
 \beamertemplatenavigationsymbolsempty
 % \setbeamertemplate{blocks}[rounded][shadow=true]
 \setbeamertemplate{itemize items}{\tiny\raisebox{1.45pt}{$\blacksquare$}}
+\newcommand*\impitem[1][]{\item[{\color{cprimary}\tiny\raisebox{1.45pt}{$\blacksquare$}}]\textcolor{cprimary}{#1}}
 \setbeamertemplate{itemize subitem}{\tiny\tikz[baseline=-0.85ex]{\fill (0,0) circle (1.65pt);}}
 
 \setbeamersize{text margin left=5mm,text margin right=5mm}
