mathfont for lucy

--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -36,6 +36,7 @@
 \ifbtl@usefont@%
     \RequirePackage{aurical}%
     \RequirePackage[default]{lato}%
+    \RequirePackage{mdsymbol,mathastext}
     \AtBeginDocument{\fontseries{m}\selectfont}%
     \def\lfseries{\fontseries{l}\selectfont}%
 \else%
