--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -130,9 +130,11 @@
 
 \setbeamerfont{section in toc}{size=\fontsize{12}{14}}
 \setbeamerfont{subsection in toc}{size=\fontsize{8}{12}}
+\setbeamerfont{disabled subsection in toc}{size=\fontsize{8}{12}}
 \setbeamertemplate{section in toc}{\medskip\vfill\hbox{}\inserttocsection\par}
 
-\setbeamertemplate{subsection in toc}{\qquad{\scalebox{0.65}{\raisebox{0.75pt}{$\blacksquare$}}} \inserttocsubsection\par}
+\setbeamertemplate{subsection in toc}{\qquad{\scalebox{0.65}{\raisebox{1.25pt}{$\blacksquare$}}}\hspace{1em}\inserttocsubsection\par}
+\setbeamertemplate{disabled subsection in toc}{\color{gray}\qquad{\scalebox{0.65}{\raisebox{1.25pt}{$\blacksquare$}}}\hspace{1em}\inserttocsubsection\par}
 
 % bibliography
 \setbeamertemplate{bibliography entry title}{}
@@ -372,6 +374,43 @@
     }}\vspace*{1em}%
     \end{frame}
     \endgroup
+}
+
+%% disabled entry
+%% -----------------------------------------------------------------------------
+
+% disable hyperlink on target if disabled part
+\long\def\btcd@disabled@subsectionintoc#1#2#3#4#5#6{%
+  \ifnum\c@tocdepth>1%
+  \ifnum#5=\beamer@showpartnumber%
+  {%
+    \beamer@saveanother%
+    \gdef\beamer@todo{}%
+    \beamer@slideinframe=#1\relax%
+    \expandafter\only\beamer@tocsections{\gdef\beamer@todo{%
+      \ifbeamer@pausesubsections\pause\fi%
+      \beamer@tempcount=#6%
+      \advance\beamer@tempcount by\beamer@sectionadjust%
+      \edef\inserttocsectionnumber{\the\beamer@tempcount}%
+      \def\inserttocsubsectionnumber{#2}%
+      \def\inserttocsubsection{#3}%
+      \beamer@tocifnothide{\ifnum\c@section=#1\beamer@toc@css\else\beamer@toc@oss\fi}%
+      {%
+        \def\beamer@breakhere{\\}%
+        \beamer@tocact{\ifnum\c@section=#1\ifnum\c@subsection=#2\beamer@toc@css\else\beamer@toc@oss\fi\else\beamer@toc@ooss\fi}
+        {disabled subsection in toc}%
+      }%
+    }}%
+    \beamer@restoreanother%
+  }%
+  \beamer@todo%
+  \fi\fi%
+}
+
+\def\fakesubsection{\@dblarg\btcd@fakesubsection}
+\def\btcd@fakesubsection[#1]#2{%
+  \stepcounter{subsection}%
+  \addtocontents{toc}{\protect\btcd@disabled@subsectionintoc{\the\c@section}{\the\c@subsection}{\textcolor{gray}{#1}}{\the\c@page}{\the\c@part}{\the\beamer@tocsectionnumber}}%
 }
 
 \endinput
