Adding struts to title

--- a/colorful-dream/beamerthemecolorful-dream.sty
+++ b/colorful-dream/beamerthemecolorful-dream.sty
@@ -219,7 +219,7 @@
     \begin{frame}[t]
         \hypertarget{section.\thesection}{}%
         \vskip4em\vfill%
-        \centering\usebeamerfont{section title}\textcolor{btcd@color@wtext}{\insertsectionhead}\vskip0.25em\par{}
+        \centering\usebeamerfont{section title}\textcolor{btcd@color@wtext}{\strut\insertsectionhead\strut}\vskip0.25em\par{}
         \textcolor{btcd@color@wtext}{\foreach \i in {1,...,\thebtcd@sectioncount}{\ifnum\i=\value{section}\fbtcd@tikzcirc{\i}\else\btcd@tikzcirc{\i}\fi}}\par\vfill%
     \end{frame}
     \endgroup\fi%
